feedBack in list changed to collapse, rewards with validation fixed

--- a/src/components/pages/lists/activity.scss
+++ b/src/components/pages/lists/activity.scss
@@ -5,6 +5,7 @@
     width: 100%;
     border: 1px solid #9013fe;
     border-radius: 4px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .activity > .activityHeader{
@@ -32,6 +33,7 @@
     height: 100%;
     background: url('https://loremflickr.com/320/240');
     display: inline-block;
+
     img{
         width: 100%;
         height: 100%;
